--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "aws-cdk-lib": "2.32.0",
     "@serverless-stack/cli": "^1.6.7",
     "@serverless-stack/resources": "^1.6.7",
-    "typescript": "^4.7.4",
     "@tsconfig/node16": "^1.0.3",
+    "@types/uuid": "^8.3.4",
+    "aws-cdk-lib": "2.32.0",
+    "typescript": "^4.7.4",
     "vitest": "^0.21.0"
   },
   "workspaces": [
     "services"
-  ]
+  ],
+  "dependencies": {
+    "uuid": "^8.3.2"
+  }
 }
