--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "remove": "sst remove",
     "console": "sst console",
     "typecheck": "tsc --noEmit",
-    "test": "vitest run"
+    "test": "sst load-config -- vitest run"
   },
   "devDependencies": {
-    "@serverless-stack/cli": "^1.6.7",
-    "@serverless-stack/resources": "^1.6.7",
+    "@serverless-stack/cli": "^1.14.4",
+    "@serverless-stack/resources": "^1.14.4",
     "@tsconfig/node16": "^1.0.3",
     "@types/uuid": "^8.3.4",
-    "aws-cdk-lib": "2.32.0",
-    "typescript": "^4.7.4",
-    "vitest": "^0.21.0"
+    "aws-cdk-lib": "2.39.1",
+    "typescript": "^4.8.3",
+    "vitest": "^0.23.4"
   },
   "workspaces": [
     "services"
   ],
   "dependencies": {
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   }
 }
